--- a/app/src/main/res/layout/fragment_dhaba_details.xml
+++ b/app/src/main/res/layout/fragment_dhaba_details.xml
@@ -13,10 +13,6 @@
             type="com.transport.mall.ui.addnewdhaba.step2.DhabaDetailsVM" />
 
         <variable
-            name="dhabaModel"
-            type="com.transport.mall.model.DhabaModel" />
-
-        <variable
             name="isUpdate"
             type="Boolean" />
 
@@ -54,7 +50,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
-                        android:text="@={dhabaModel.name}"
+                        android:text="@={viewModel.dhabaModel.name}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -77,7 +73,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text|textMultiLine"
-                        android:text="@={dhabaModel.address}"
+                        android:text="@={viewModel.dhabaModel.address}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -138,7 +134,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
-                        android:text="@={dhabaModel.landmark}"
+                        android:text="@={viewModel.dhabaModel.landmark}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -161,7 +157,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
-                        android:text="@={dhabaModel.area}"
+                        android:text="@={viewModel.dhabaModel.area}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -349,7 +345,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
                         android:maxLength="6"
-                        android:text="@={dhabaModel.pincode}"
+                        android:text="@={viewModel.dhabaModel.pincode}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
