--- a/app/src/main/res/layout/fragment_owner_details.xml
+++ b/app/src/main/res/layout/fragment_owner_details.xml
@@ -51,7 +51,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
                         android:singleLine="true"
-                        android:text="@={viewModel.ownerName}"
+                        android:text="@={viewModel.ownerModel.ownerName}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -75,7 +75,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="phone"
                         android:maxLength="13"
-                        android:text="@={viewModel.mobile}"
+                        android:text="@={viewModel.ownerModel.mobile}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -97,7 +97,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="textEmailAddress"
-                        android:text="@={viewModel.email}"
+                        android:text="@={viewModel.ownerModel.email}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -120,7 +120,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text|textMultiLine"
                         android:singleLine="false"
-                        android:text="@={viewModel.address}"
+                        android:text="@={viewModel.ownerModel.address}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -180,7 +180,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
                         android:maxLength="10"
-                        android:text="@={viewModel.panNumber}"
+                        android:text="@={viewModel.ownerModel.panNumber}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -202,7 +202,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="number"
                         android:maxLength="12"
-                        android:text="@={viewModel.adharCard}"
+                        android:text="@={viewModel.ownerModel.adharCard}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
                 </com.google.android.material.textfield.TextInputLayout>
