--- a/app/src/main/res/layout/fragment_dhaba_details.xml
+++ b/app/src/main/res/layout/fragment_dhaba_details.xml
@@ -13,6 +13,10 @@
             type="com.transport.mall.ui.addnewdhaba.step2.DhabaDetailsVM" />
 
         <variable
+            name="context"
+            type="android.content.Context" />
+
+        <variable
             name="isUpdate"
             type="Boolean" />
 
@@ -198,17 +202,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
-
-                    <ProgressBar
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="@dimen/_3sdp"
-                        android:visibility="@{viewModel.highwayProgressObservable.booleanValue() ? View.VISIBLE : View.GONE}"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/ctlPropertyStatus"
@@ -277,14 +271,6 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <ProgressBar
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="@dimen/_3sdp"
-                        android:visibility="@{viewModel.stateProgressObservable.booleanValue() ? View.VISIBLE : View.GONE}"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -316,15 +302,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/_15sdp"
                         android:background="@drawable/ic_spinner_dropdown"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <ProgressBar
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="@dimen/_3sdp"
-                        android:visibility="@{viewModel.cityProgressObservable.booleanValue() ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -428,7 +405,8 @@
                             <ImageView
                                 android:layout_width="@dimen/_50sdp"
                                 android:layout_height="@dimen/_50sdp"
-                                android:src="@drawable/ic_video_picker" />
+                                android:src="@drawable/ic_video_picker"
+                                android:visibility="@{loadingVideo ? View.INVISIBLE : View.VISIBLE}" />
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 android:layout_width="wrap_content"
@@ -439,7 +417,8 @@
                                 android:gravity="center"
                                 android:text="@string/upload_dhaba_video"
                                 android:textColor="@color/black"
-                                android:textSize="@dimen/_12ssp" />
+                                android:textSize="@dimen/_12ssp"
+                                android:visibility="@{loadingVideo ? View.INVISIBLE : View.VISIBLE}" />
                         </LinearLayout>
 
                         <FrameLayout
@@ -492,11 +471,10 @@
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:padding="@dimen/_10sdp"
-                    android:text="@string/next"
+                    android:text="@{isUpdate ? context.getString(R.string.update) :context.getString(R.string.next)}"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_14ssp"
-                    android:visibility="@{isUpdate ? View.GONE : View.VISIBLE}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/uploadedImageRecycler" />
@@ -520,12 +498,14 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <View
-                android:id="@+id/viewRestrictor"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clickable="true"
-                android:visibility="@{isUpdate ? View.VISIBLE : View.GONE}" />
+            <!--
+                        <View
+                            android:id="@+id/viewRestrictor"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:clickable="true"
+                            android:visibility="@{isUpdate ? View.VISIBLE : View.GONE}" />
+            -->
 
         </FrameLayout>
     </ScrollView>
