--- a/app/src/main/res/layout/fragment_parking_amenities.xml
+++ b/app/src/main/res/layout/fragment_parking_amenities.xml
@@ -14,6 +14,10 @@
         <variable
             name="viewmodel"
             type="com.transport.mall.ui.addnewdhaba.step3.foodamenities.ParkingAmenitiesVM" />
+
+        <variable
+            name="isUpdate"
+            type="Boolean" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -242,7 +246,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/_20sdp"
                 android:background="@drawable/primary_color_btn_selector"
-                android:text="Save"
+                android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.save)}"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
