--- a/app/src/main/res/layout/view_side_profile.xml
+++ b/app/src/main/res/layout/view_side_profile.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/tvProfileName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{userModel.fname.en}"
+                    android:text="@{userModel.fname}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14ssp"
                     tools:text="Profile Name" />
