Full Image View, Update Food Amenities, Upate ParkingAmenities

--- a/app/src/main/res/layout/fragment_security_amenities.xml
+++ b/app/src/main/res/layout/fragment_security_amenities.xml
@@ -14,6 +14,10 @@
         <variable
             name="viewmodel"
             type="com.transport.mall.ui.addnewdhaba.step3.amenities.sleeping.SecurityAmenitiesVM" />
+
+        <variable
+            name="isUpdate"
+            type="Boolean" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -436,7 +440,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/_20sdp"
                 android:background="@drawable/primary_color_btn_selector"
-                android:text="Save"
+                android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.save)}"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
