--- a/app/src/main/res/layout/fragment_owner_details.xml
+++ b/app/src/main/res/layout/fragment_owner_details.xml
@@ -57,29 +57,48 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/phoneNoTil"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+                <LinearLayout
+                    android:id="@+id/editlayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_15sdp"
-                    android:hint="@string/phone_number"
+                    android:background="@drawable/grey_stroke"
+                    android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/ownerNameTil">
 
-                    <com.google.android.material.textfield.TextInputEditText
+                    <com.hbb20.CountryCodePicker
+                        android:id="@+id/ccpCountryCode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        app:ccpDialog_backgroundColor="@color/grey"
+                        app:ccp_contentColor="@color/black"
+                        app:ccp_textSize="@dimen/_12ssp" />
+
+                    <View
+                        android:layout_width="0.5dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/_2sdp"
+                        android:background="@color/grey" />
+
+                    <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/edPhoneNumber"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_regular"
-                        android:inputType="phone"
-                        android:maxLength="13"
+                        android:layout_marginStart="@dimen/_4sdp"
+                        android:background="@android:color/transparent"
+                        android:hint="@string/_10_digit_mobile_number"
+                        android:inputType="number"
+                        android:maxLength="10"
                         android:text="@={viewModel.ownerModel.mobile}"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_14ssp" />
-
-                </com.google.android.material.textfield.TextInputLayout>
+                        android:textColorHint="@color/grey"
+                        android:textSize="@dimen/_13ssp" />
+                </LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/emailTil"
@@ -90,7 +109,7 @@
                     android:hint="@string/email_address"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/phoneNoTil">
+                    app:layout_constraintTop_toBottomOf="@+id/editlayout">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
