terms and conditions, listing filters, update profile, strings translation updation, save as draft

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -141,15 +141,19 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tvPrivacyPolicy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/default_btn_selector"
                     android:padding="@dimen/_10sdp"
                     android:text="@string/privacy_policy"
                     android:textSize="@dimen/_12ssp" />
 
                 <TextView
+                    android:id="@+id/tvTermsConditions"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/default_btn_selector"
                     android:padding="@dimen/_10sdp"
                     android:text="@string/terms_and_conditions"
                     android:textSize="@dimen/_12ssp" />
