--- a/app/src/main/res/layout/view_side_profile.xml
+++ b/app/src/main/res/layout/view_side_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -29,10 +28,11 @@
 
             <com.transport.mall.utils.custom.CircleImageView
                 android:id="@+id/imProfile"
+                loadImage="@{userModel.profileImage}"
+                placeholder="@{R.drawable.ic_profile_pic_placeholder}"
                 android:layout_width="@dimen/_60sdp"
                 android:layout_height="@dimen/_60sdp"
-                android:layout_marginEnd="10dp"
-                app:srcCompat="@drawable/ic_profile_pic_placeholder" />
+                android:layout_marginEnd="10dp" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -44,7 +44,8 @@
                     android:id="@+id/tvProfileName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{userModel.fname}"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:text="@{userModel.name}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14ssp"
                     tools:text="Profile Name" />
