--- a/app/src/main/res/layout/fragment_light_amenities.xml
+++ b/app/src/main/res/layout/fragment_light_amenities.xml
@@ -14,229 +14,247 @@
         <variable
             name="isUpdate"
             type="Boolean" />
+
+        <variable
+            name="viewOnly"
+            type="Boolean" />
     </data>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:animateLayoutChanges="true"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:paddingHorizontal="@dimen/_10sdp"
-            android:paddingVertical="20dp">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:orientation="vertical">
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text="@string/tower_bright_light"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp" />
-
-                <RadioGroup
-                    android:id="@+id/rgTower"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:checkedButton="@id/rbTowerNo"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:id="@+id/rbTowerYes"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/_10sdp"
-                        android:text="@string/yes" />
-
-                    <RadioButton
-                        android:id="@+id/rbTowerNo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/_10sdp"
-                        android:text="@string/no" />
-
-                </RadioGroup>
-            </LinearLayout>
-
-            <FrameLayout
-                android:id="@+id/frameTowerPhoto"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_130sdp"
-                android:background="@color/grey_light"
-                android:visibility="@{rbTowerYes.checked ? View.VISIBLE : View.GONE}">
+                android:layout_height="match_parent"
+                android:animateLayoutChanges="true"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingHorizontal="@dimen/_10sdp"
+                android:paddingVertical="20dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="20dp">
-
-                    <ImageView
-                        android:layout_width="@dimen/_50sdp"
-                        android:layout_height="@dimen/_50sdp"
-                        android:src="@drawable/ic_add_round" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:orientation="vertical">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginVertical="10dp"
                         android:layout_marginStart="@dimen/_5sdp"
-                        android:fontFamily="@font/opensans_regular"
-                        android:text="@string/upload_photo"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text="@string/tower_bright_light"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
+                    <RadioGroup
+                        android:id="@+id/rgTower"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:checkedButton="@id/rbTowerNo"
+                        android:orientation="horizontal">
+
+                        <RadioButton
+                            android:id="@+id/rbTowerYes"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/_10sdp"
+                            android:text="@string/yes" />
+
+                        <RadioButton
+                            android:id="@+id/rbTowerNo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/_10sdp"
+                            android:text="@string/no" />
+
+                    </RadioGroup>
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/ivTowerImg"
+                <FrameLayout
+                    android:id="@+id/frameTowerPhoto"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="@dimen/_130sdp"
                     android:background="@color/grey_light"
-                    android:scaleType="fitCenter"
-                    android:visibility="gone" />
+                    android:visibility="@{rbTowerYes.checked ? View.VISIBLE : View.GONE}">
 
-            </FrameLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="20dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                        <ImageView
+                            android:layout_width="@dimen/_50sdp"
+                            android:layout_height="@dimen/_50sdp"
+                            android:src="@drawable/ic_add_round" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text="@string/bulb_light"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp" />
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginVertical="10dp"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:text="@string/upload_photo"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_14ssp" />
 
-                <RadioGroup
-                    android:id="@+id/rgBulb"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:checkedButton="@id/rbBulbNo"
-                    android:orientation="horizontal">
+                    </LinearLayout>
 
-                    <RadioButton
-                        android:id="@+id/rbBulbYes"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/_10sdp"
-                        android:text="@string/yes" />
+                    <ImageView
+                        android:id="@+id/ivTowerImg"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/grey_light"
+                        android:scaleType="fitCenter"
+                        android:visibility="gone" />
 
-                    <RadioButton
-                        android:id="@+id/rbBulbNo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/_10sdp"
-                        android:text="@string/no" />
-
-                </RadioGroup>
-            </LinearLayout>
-
-            <FrameLayout
-                android:id="@+id/frameBulbPhoto"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_130sdp"
-                android:visibility="@{rbBulbYes.checked ? View.VISIBLE : View.GONE}">
+                </FrameLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/grey_light"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="20dp">
-
-                    <ImageView
-                        android:layout_width="@dimen/_50sdp"
-                        android:layout_height="@dimen/_50sdp"
-                        android:src="@drawable/ic_add_round" />
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginVertical="10dp"
                         android:layout_marginStart="@dimen/_5sdp"
-                        android:fontFamily="@font/opensans_regular"
-                        android:text="@string/upload_photo"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text="@string/bulb_light"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
+                    <RadioGroup
+                        android:id="@+id/rgBulb"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:checkedButton="@id/rbBulbNo"
+                        android:orientation="horizontal">
+
+                        <RadioButton
+                            android:id="@+id/rbBulbYes"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/_10sdp"
+                            android:text="@string/yes" />
+
+                        <RadioButton
+                            android:id="@+id/rbBulbNo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/_10sdp"
+                            android:text="@string/no" />
+
+                    </RadioGroup>
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/ivBulbImage"
+                <FrameLayout
+                    android:id="@+id/frameBulbPhoto"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/grey_light"
-                    android:scaleType="fitCenter"
-                    android:visibility="gone" />
+                    android:layout_height="@dimen/_130sdp"
+                    android:visibility="@{rbBulbYes.checked ? View.VISIBLE : View.GONE}">
 
-            </FrameLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/grey_light"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="20dp">
+
+                        <ImageView
+                            android:layout_width="@dimen/_50sdp"
+                            android:layout_height="@dimen/_50sdp"
+                            android:src="@drawable/ic_add_round" />
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginVertical="10dp"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:text="@string/upload_photo"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_14ssp" />
+
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/ivBulbImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/grey_light"
+                        android:scaleType="fitCenter"
+                        android:visibility="gone" />
+
+                </FrameLayout>
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text="@string/_24x7_back_up_of_electricity"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp" />
-
-                <RadioGroup
-                    android:id="@+id/rgElectricity"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:checkedButton="@id/rbElectricityNo"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <RadioButton
-                        android:id="@+id/rbElectricityYes"
+                    <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/_10sdp"
-                        android:text="@string/yes" />
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text="@string/_24x7_back_up_of_electricity"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_14ssp" />
 
-                    <RadioButton
-                        android:id="@+id/rbElectricityNo"
-                        android:layout_width="wrap_content"
+                    <RadioGroup
+                        android:id="@+id/rgElectricity"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/_10sdp"
-                        android:text="@string/no" />
+                        android:checkedButton="@id/rbElectricityNo"
+                        android:orientation="horizontal">
 
-                </RadioGroup>
+                        <RadioButton
+                            android:id="@+id/rbElectricityYes"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/_10sdp"
+                            android:text="@string/yes" />
+
+                        <RadioButton
+                            android:id="@+id/rbElectricityNo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/_10sdp"
+                            android:text="@string/no" />
+
+                    </RadioGroup>
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/btnSaveDhaba"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/_20sdp"
+                    android:background="@drawable/primary_color_btn_selector"
+                    android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.save)}"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:visibility="@{viewOnly ? View.GONE : View.VISIBLE}" />
+
             </LinearLayout>
 
-            <Button
-                android:id="@+id/btnSaveDhaba"
+            <View
+                android:id="@+id/viewRestrictor"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="@dimen/_20sdp"
-                android:background="@drawable/primary_color_btn_selector"
-                android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.save)}"
-                android:textAllCaps="false"
-                android:textColor="@color/white" />
+                android:layout_height="match_parent"
+                android:clickable="true"
+                android:visibility="@{viewOnly ? View.VISIBLE : View.GONE}" />
 
-        </LinearLayout>
+        </FrameLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
