--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -117,6 +117,7 @@
                         android:textSize="@dimen/_14ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/accountnumber"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -132,8 +133,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
-                        android:inputType="text"
-                        android:maxLength="18"
+                        android:inputType="number"
+                        android:maxLength="9"
                         android:text="@={viewModel.bankModel.accountNumber}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
@@ -483,6 +484,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:orientation="vertical"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/divider5">
